# BetweenBooks.github.io

./: .gitignore  CNAME  README.md  about.html  about.md  atom.xml  contact.md  cspell.json  deploy  flake.nix  git-metadata  go  index.html  index.md  make-compressed-image  site.cabal  site.hs  spellcheck  stack.yaml
_site/: about.html
css/: Base.css  Base.hs  library.css  oldcss-stuffs  simple.css
metadata/: gitinfo  images.jsonl
nix/: default.nix  overlay.nix  stack-shell.nix
scripts/: git-metadata  make-compressed-image  make-image-metadata
shelf/: bicycle-race-2018.html  bicycle-race-2018.md  children-of-blood-and-bone-2018.html  children-of-blood-and-bone-2018.md  doughnut-economics-2017.html  doughnut-economics-2017.md  ending-fossil-fuels-2021.html  ending-fossil-fuels-2021.md  entangled-life-2020.html  entangled-life-2020.md  essays-in-idleness-1998.html  essays-in-idleness-1998.md  himalaya-2020.html  himalaya-2020.md  how-to-kill-a-city-2017.html  how-to-kill-a-city-2017.md  meeting-the-universe-halfway-2007.html  meeting-the-universe-halfway-2007.md  notes-from-deep-time-2021.html  notes-from-deep-time-2021.md  the-poetic-edda-1999.html  the-poetic-edda-1999.md
tags/: activism.html  adventurous.html  architecture.html  art.html  books.html  buddhism.html  climate.html  compassion.html  democracy.html  economics.html  empathy.html  ethics.html  fantasy.html  feminism.html  fiction.html  fun.html  history.html  informative.html  language.html  long-read.html  music.html  non-fiction.html  parenting.html  personal.html  philanthropy.html  poetry.html  (+10 more)
(+217 files in other folders)
